improved and added more in shopping side and also fixed more bugs

--- a/views/admin/editProduct.ejs
+++ b/views/admin/editProduct.ejs
@@ -59,6 +59,23 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div class="col-lg-4">
+                                            <div class="mb-4">
+                                                <label class="form-label">Size</label>
+                                                <div class="row gx-2">
+                                                    <select class="form-select" id="product_size" name="product_size[]"
+                                                        multiple required>
+                                                        <!-- <option value="" selected disabled>Select a size</option> -->
+                                                        <option value="XS">XS</option>
+                                                        <option value="S">S</option>
+                                                        <option value="M">M</option>
+                                                        <option value="L">L</option>
+                                                        <option value="XL">XL</option>
+                                                        <!-- Add more size options as needed -->
+                                                    </select>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
 
 
@@ -71,6 +88,24 @@
                                                     <input min="1" placeholder="Quantity" id="product_quantity"
                                                         type="text" class="form-control" name="product_quantity"
                                                         value="<%=product.quantity  %>" required />
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="col-lg-4">
+                                            <div class="mb-4">
+                                                <label class="form-label">Color</label>
+                                                <div class="row gx-2">
+                                                    <select id="product_color" class="form-select"
+                                                        name="product_color[]" multiple required>
+                                                        <!-- <option value="" selected disabled>Select a color</option> -->
+                                                        <option value="red" style="color:red;">Red</option>
+                                                        <option value="blue" style="color: blue;">Blue</option>
+                                                        <option value="green" style="color:green;">Green</option>
+                                                        <option value="yellow" style="color: yellow;">Yellow</option>
+                                                        <option value="white" style="color: white;">White</option>
+                                                        <option value="black" style="color: black;">Black</option>
+                                                        <!-- Add more color options as needed -->
+                                                    </select>
                                                 </div>
                                             </div>
                                         </div>
@@ -114,12 +149,12 @@
                                                         <img id="product_img" src="/images/<%= image%>" alt="" />
                                                         <% }) %>
                                                             <input name="product_img" class="form-control" type="file"
-                                                                 accept="image/*" onchange="viewImage(event)" multiple />
+                                                                accept="image/*" onchange="viewImage(event)" multiple />
                                                 </div>
                                             </div>
                                         </div>
                                     </div>
-                                    <div >
+                                    <div>
                                         <!-- <button class="btn btn-md rounded font-sm hover-up">
                                             Submit
                                         </button> -->
@@ -176,7 +211,22 @@
                             product_quantity.setCustomValidity("");
                         }
                     });
+                    console.log("haai") ;
 
+                    const productSize = null
+
+                    // Get a reference to the select element
+                    const selectElement = document.getElementById('product_size');
+
+                    // Loop through each option
+                    for (let i = 0; i < selectElement.options.length; i++) {
+                        const option = selectElement.options[i];
+
+                        // Check if the option value is in the productSize array
+                        if (productSize.includes(option.value)) {
+                            option.selected = true; // Set the selected attribute
+                        }
+                    }
 
 
                 </script>
