--- a/views/user/registration.ejs
+++ b/views/user/registration.ejs
@@ -133,7 +133,7 @@
                             <p id="para2" style="color: rgb(255, 2, 2);"></p>
                         </div>
 
-                        <input class="btn btn-primary" value="Register" onclick="validateForm()">
+                        <input type="submit" class="btn btn-primary" value="Register" onclick="validateForm()">
 
             </form>
             <div class=" text-center pt-3">
