--- a/views/user/index.ejs
+++ b/views/user/index.ejs
@@ -3,11 +3,11 @@
     <%- include('./layouts/navbar.ejs') -%>
 
         <!-- Hero Section Begin -->
-        <!-- <section class="hero">
+        <!-- <!-- <section class="hero"> -->
         <div class="hero__slider owl-carousel">
 
 
-            <div class="hero__items set-bg" data-setbg="/user/img/hero/hero-1.jpg">
+            <!-- <div class="hero__items set-bg" data-setbg="/user/img/hero/hero-1.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-5 col-lg-7 col-md-8">
@@ -27,9 +27,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div>  -->
         
-            <div class="hero__items set-bg" data-setbg="/user/img/hero/hero-2.jpg">
+            <!-- <div class="hero__items set-bg" data-setbg="/user/img/hero/hero-2.jpg">
                 <div class="container">
                     <div class="row">
                         <div class="col-xl-5 col-lg-7 col-md-8">
@@ -49,9 +49,9 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
-    </section> -->
+    </section>
         <section class="hero">
             <div class="hero__slider owl-carousel">
                 <% for (let i=0; i < banner.length; i++) { %>
@@ -78,7 +78,7 @@
                                             <a href="#"><i class="fa fa-twitter"></i></a>
                                             <a href="#"><i class="fa fa-pinterest"></i></a>
                                             <a href="#"><i class="fa fa-instagram"></i></a>
-                                        </div>
+                                        </div>      
                                     </div>
                                 </div>
                             </div>
