--- a/views/user/layouts/navbar.ejs
+++ b/views/user/layouts/navbar.ejs
@@ -27,7 +27,7 @@
                         <a href="#" class="search-switch"><img src="/user/img/icon/search.png" alt=""></a>
                         <a href="/loadWhishlist"><img src="/user/img/icon/heart.png" alt=""></a>
                         <a href="/loadCart"><img src="/user/img/icon/cart.png" alt=""> <span></span></a>
-                        <!-- <div class="price">₹0.00</div> -->
+                        <!-- <a href="/wallet" class="price">₹0.00</a> -->
                     </div>
                 </div>
             </div>
