--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -3,7 +3,13 @@
     <%- include('./layouts/sidebar.ejs') -%>
 
         <%- include('./layouts/topbar.ejs') -%>
-
+            <style>
+                #productDescription {
+                    overflow: hidden;
+                    max-height: 100px;
+                    /* Adjust the height as needed */
+                }
+            </style>
 
 
             <section class="content-main">
@@ -63,10 +69,14 @@
                                                 </td>
 
                                                 <td>
-                                                    <span>
-                                                        <%= product[i].description %>
-                                                    </span>
-                                                </td>
+                                                    <% if (product[i].description.length > 50) { %>
+                                                    <span id="shortDescription<%= product[i]._id %>"><%= product[i].description.substring(0, 50) %></span>
+                                                    <span id="fullDescription<%= product[i]._id %>" style="display: none;"><%= product[i].description %></span>
+                                                    <a href="#" class="show-more-link" onclick="toggleDescription('<%= product[i]._id %>')">Show More</a>
+                                                    <% } else { %>
+                                                    <%= product[i].description %>
+                                                    <% } %>
+                                                  </td>
 
                                                 <td>
                                                     <span class="badge rounded-pill alert-success">
@@ -164,6 +174,22 @@
             <%- include('./layouts/footer.ejs') -%>
 
                 <script>
+                    function toggleDescription(productId) {
+                        const shortDescription = document.getElementById("shortDescription" + productId);
+                        const fullDescription = document.getElementById("fullDescription" + productId);
+                        const showMoreLink = document.querySelector(`[onclick="toggleDescription('${productId}')"]`);
+
+                        if (shortDescription.style.display === "none") {
+                            shortDescription.style.display = "inline";
+                            fullDescription.style.display = "none";
+                            showMoreLink.innerHTML = "Show More";
+                        } else {
+                            shortDescription.style.display = "none";
+                            fullDescription.style.display = "inline";
+                            showMoreLink.innerHTML = "Show Less";
+                        }
+                    }
+
                     const productList = async (productId) => {
                         try {
                             const button = document.getElementById(`block-${productId}`);
@@ -223,8 +249,8 @@
                                     window.location = '/admin/products'
                                 }
                             }
-                            } catch (error) {
-                                console.log(error.message);
-                            }
-                        } 
+                        } catch (error) {
+                            console.log(error.message);
+                        }
+                    } 
                 </script>
