--- a/views/user/viewOrdered.ejs
+++ b/views/user/viewOrdered.ejs
@@ -35,6 +35,9 @@
                 <p class="text-muted mb-2">
                   Quantity: <span class="fw-bold"><%= element.quantity %></span>
                 </p>
+                <p class="text-muted mb-2">
+                  Quantity: <span class="fw-bold"><%= element.quantity %></span>
+                </p>
                 <h4 class="mb-3">₹<%= element.product_Id.price %></h4>
               </div>
               <div>
